Setup CI/CD, npm publishing, and documentation
🚀 Infrastructure & Publishing
- GitHub Actions workflow for multi-version CI/CD
  - Node 18/20 matrix testing
  - Python 3.7-3.11 syntax checks
  - PHP 7.4-8.2 linting
  - Auto-build and artifact uploads
- Prepared package.json for npm publishing
  - Scoped package: @ableton-cookbook/mcp-server
  - Added bin entry for CLI usage
  - Repository metadata and keywords
  - Publish config for public access

📚 Documentation & Templates
- GitHub Pages site at docs/index.html
  - Beautiful landing page with feature overview
  - Getting started guide
  - Vision and roadmap
- Issue templates (bug_report.yml, feature_request.yml)
- CONTRIBUTING.md with development guidelines
- LICENSE (MIT)
- Updated README with badges, new structure, links

🎯 Ready For
- npm publish (when ready)
- GitHub Pages deployment
- Community contributions
- Automated testing on every push

--- a/packages/mcp-server/package.json
+++ b/packages/mcp-server/package.json
@@ -1,14 +1,20 @@
 {
-    "name": "ableton-live-mcp",
-    "version": "1.0.0",
-    "description": "A Model Context Protocol server for interactions with Ableton Live",
+    "name": "@ableton-cookbook/mcp-server",
+    "version": "0.1.0",
+    "description": "MCP server for Ableton Live - Version control, rack analysis & real-time control for AI-powered music production",
     "main": "dist/index.js",
     "type": "module",
+    "bin": {
+        "ableton-cookbook-mcp": "dist/index.js"
+    },
     "scripts": {
         "build": "tsc",
         "start": "node dist/index.js",
         "watch": "tsc --watch",
-        "dev": "tsc --watch"
+        "dev": "tsc --watch",
+        "lint": "eslint src/**/*.ts",
+        "format": "prettier --write src/**/*.ts",
+        "prepublishOnly": "npm run build"
     },
     "dependencies": {
         "@modelcontextprotocol/sdk": "^0.6.0",
@@ -28,5 +34,34 @@
         "eslint-config-prettier": "^10.1.8",
         "prettier": "^3.8.1",
         "typescript": "^5.3.3"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/teamallnighter/ableton-cookbook-mcp.git",
+        "directory": "packages/mcp-server"
+    },
+    "keywords": [
+        "ableton",
+        "ableton-live",
+        "mcp",
+        "model-context-protocol",
+        "music-production",
+        "daw",
+        "ai",
+        "version-control",
+        "claude",
+        "anthropic"
+    ],
+    "author": "Team All Nighter",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/teamallnighter/ableton-cookbook-mcp/issues"
+    },
+    "homepage": "https://github.com/teamallnighter/ableton-cookbook-mcp#readme",
+    "publishConfig": {
+        "access": "public"
+    },
+    "engines": {
+        "node": ">=18.0.0"
     }
 }
