Fix CI build errors
- Remove Python 3.7 (not available on Ubuntu 24.04)
- Add Python 3.12 to test matrix
- Switch from npm ci to npm install (more reliable in CI)
- Remove npm cache config (causing issues)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,13 +21,11 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-        cache-dependency-path: packages/mcp-server/package-lock.json
     
     - name: Install dependencies
       run: |
         cd packages/mcp-server
-        npm ci
+        npm install
     
     - name: Lint code
       run: |
@@ -60,7 +58,7 @@ jobs:
     
     strategy:
       matrix:
-        python-version: ['3.7', '3.8', '3.9', '3.10', '3.11']
+        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12']
     
     steps:
     - uses: actions/checkout@v4
