Add desktop installer with brand colors and custom icons
- Built Electron desktop app with 5-step setup wizard
- Applied brand colors (#A8A8A8, #F1AC00, #424040, #C8C8C8)
- Added custom ABLCB.icns and ABLCB-DARK.icns icons
- Created DMG installer for macOS (93MB)
- Created NSIS installer for Windows (77MB)
- Auto-detects Ableton Live and Claude Desktop
- Configures MCP server integration automatically

--- a/packages/desktop-app/package.json
+++ b/packages/desktop-app/package.json
@@ -20,28 +20,30 @@
     "author": "Team All Nighter",
     "license": "MIT",
     "devDependencies": {
+        "7zip-bin": "^5.2.0",
         "electron": "^28.0.0",
         "electron-builder": "^24.9.1"
     },
     "dependencies": {
+        "chokidar": "^3.5.3",
         "electron-store": "^8.1.0",
-        "node-machine-id": "^1.1.12",
-        "chokidar": "^3.5.3"
+        "node-machine-id": "^1.1.12"
     },
     "build": {
         "appId": "com.abletonCookbook.desktop",
         "productName": "Ableton Cookbook",
+        "electronVersion": "28.3.3",
         "mac": {
             "category": "public.app-category.music",
             "target": [
                 "dmg",
                 "zip"
             ],
-            "icon": "assets/icon.icns"
+            "icon": "assets/ABLCB.icns"
         },
         "dmg": {
             "title": "Install Ableton Cookbook",
-            "icon": "assets/icon.icns",
+            "icon": "assets/ABLCB.icns",
             "window": {
                 "width": 540,
                 "height": 380
