--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^8.55.0",
         "@typescript-eslint/parser": "^8.55.0",
+        "7zip-bin": "^5.2.0",
         "eslint": "^9.39.2",
         "eslint-config-prettier": "^9.1.0",
         "prettier": "^3.4.2"
